--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,4 @@
+@import "./global.scss";
 .app {
   height: 100vh;
 
@@ -7,10 +8,16 @@
     background-color: lightsalmon;
     position: relative;
     top: 70px;
+    scroll-snap-type: y mandatory;
+    scrollbar-width: none; //for firefox browser
+    &::-webkit-scrollbar {
+      display: none;
+    }
 
     > * {
       width: 100vw;
       height: calc(100vh - 70px);
+      scroll-snap-align: start;
     }
   }
 }
