--- a/src/app.scss
+++ b/src/app.scss
@@ -8,6 +8,7 @@
     background-color: lightsalmon;
     position: relative;
     top: 70px;
+    scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
     scrollbar-width: none; //for firefox browser
     &::-webkit-scrollbar {
