--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -1,8 +1,15 @@
 .topbar {
   width: 100%;
   height: 70px;
-  background-color: darkslateblue;
+  background-color: aquamarine;
+  color: darkslateblue;
   position: fixed;
   top: 0;
   z-index: 2;
+  .wrapper {
+    padding: 10px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
