--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -13,6 +13,8 @@
     justify-content: space-between;
 
     .left {
+      display: flex;
+      align-items: center;
       .logo {
         font-size: 40px;
         font-weight: 700;
