--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -15,12 +15,29 @@
     .left {
       display: flex;
       align-items: center;
+
       .logo {
         font-size: 40px;
         font-weight: 700;
         text-decoration: none;
         color: inherit;
+        margin-right: 40px;
       }
+    .itemContainer{
+      display: flex;
+      align-items: center;
+      margin-left: 30px;
+
+      .icons{
+        font-size: 18px;
+        margin-right: 5px;
+      }
+
+      .span{
+        font-size: 15px;
+        font-weight: 400;
+      }
+    }
     }
   }
 }
