--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -1,7 +1,7 @@
 .topbar {
   width: 100%;
   height: 70px;
-  background-color: aquamarine;
+  background-color: white;
   color: darkslateblue;
   position: fixed;
   top: 0;
@@ -23,21 +23,59 @@
         color: inherit;
         margin-right: 40px;
       }
-    .itemContainer{
-      display: flex;
-      align-items: center;
-      margin-left: 30px;
+      .itemContainer {
+        display: flex;
+        align-items: center;
+        margin-left: 30px;
 
-      .icons{
-        font-size: 18px;
-        margin-right: 5px;
-      }
+        .icons {
+          font-size: 18px;
+          margin-right: 5px;
+        }
 
-      .span{
-        font-size: 15px;
-        font-weight: 400;
+        .span {
+          font-size: 15px;
+          font-weight: 400;
+        }
       }
     }
+    .right {
+      .hamburger {
+        width: 32px;
+        height: 25px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        cursor: pointer;
+
+        span {
+          width: 100%;
+          height: 3px;
+          background-color: #483d8b;
+          transform-origin: left;
+          transition: all 2s ease;
+        }
+      }
+    }
+  }
+  &.active {
+    background-color: #483d8b;
+    color: white;
+
+    .hamburger {
+      span {
+        &:first-child {
+          background-color: white;
+          transform: rotate(45deg);
+        }
+        &:nth-child(2) {
+          opacity: 0;
+        }
+        &:last-child {
+          background-color: white;
+          transform: rotate(-45deg);
+        }
+      }
     }
   }
 }
