--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -1,8 +1,9 @@
+@import "../../global.scss";
 .topbar {
   width: 100%;
   height: 70px;
   background-color: white;
-  color: darkslateblue;
+  color: $mainColor;
   position: fixed;
   top: 0;
   z-index: 2;
@@ -52,7 +53,7 @@
         span {
           width: 100%;
           height: 3px;
-          background-color: #483d8b;
+          background-color: $mainColor;
           transform-origin: left;
           transition: all 2s ease;
         }
@@ -60,7 +61,7 @@
     }
   }
   &.active {
-    background-color: #483d8b;
+    background-color: $mainColor;
     color: white;
 
     .hamburger {
