--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,3 +1,13 @@
 .intro {
   background-color: white;
+  display: flex;
+
+  .left {
+    flex: 0.5;
+    
+  }
+  .right {
+    flex: 0.5;
+    
+  }
 }
