--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -4,10 +4,23 @@
 
   .left {
     flex: 0.5;
-    
+    overflow: hidden;
+
+    .imgContainer {
+      width: 700px;
+      height: 700px;
+      background-color: crimson;
+      border-radius: 50%;
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+
+      img {
+        height: 90%;
+      }
+    }
   }
   .right {
     flex: 0.5;
-    
   }
 }
