--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -9,11 +9,12 @@
     .imgContainer {
       width: 700px;
       height: 700px;
-      background-color: crimson;
+      background-color: #b2b1b9;
       border-radius: 50%;
       display: flex;
       align-items: flex-end;
       justify-content: center;
+      float: right;
 
       img {
         height: 90%;
@@ -22,5 +23,25 @@
   }
   .right {
     flex: 0.5;
+    position: relative;
+
+    .wrapper {
+      width: 100%;
+      height: 100%;
+      padding-left: 50px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      h1 {
+        font-size: 60px;
+        margin: 10px 0;
+      }
+      h2 {
+        font-size: 35px;
+      }
+      h3 {
+        font-size: 30px;
+      }
+    }
   }
 }
