--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -9,7 +9,7 @@
     .imgContainer {
       width: 700px;
       height: 700px;
-      background-color: #b2b1b9;
+      background-color: #4B6587;
       border-radius: 50%;
       display: flex;
       align-items: flex-end;
@@ -17,7 +17,7 @@
       float: right;
 
       img {
-        height: 90%;
+        height: 95%;
       }
     }
   }
@@ -41,6 +41,25 @@
       }
       h3 {
         font-size: 30px;
+        span {
+          font-size: inherit;
+          color: #4B6587;
+        }
+      }
+    }
+    a {
+      position: absolute;
+      bottom: 10px;
+      left: 40%;
+
+      img {
+        width: 30px;
+        animation: arrowBlink 2s infinite;
+      }
+      @keyframes arrowBlink {
+        100% {
+          opacity: 0;
+        }
       }
     }
   }
