--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,3 +1,27 @@
-.portfolio{
-    background-color: lightskyblue;
+@import "../../global.scss";
+.portfolio {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  h1 {
+    font-size: 50px;
+  }
+
+  ul {
+    margin: 10px;
+    padding: 0;
+    list-style: none;
+    display: flex;
+
+    li {
+      font-size: 12px;
+      margin-right: 50px;
+      padding: 0.7;
+
+      &:active {
+        background-color: $mainColor;
+      }
+    }
+  }
 }
