--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -15,12 +15,52 @@
     display: flex;
 
     li {
-      font-size: 12px;
+      font-size: 14px;
       margin-right: 50px;
-      padding: 0.7;
+      padding: 7px;
+      border-radius: 10px;
+      cursor: pointer;
 
-      &:active {
+      &.active {
         background-color: $mainColor;
+        color: white;
+      }
+    }
+  }
+  .container {
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    .item {
+      width: 220px;
+      height: 150px;
+      border-radius: 20px;
+      border: 1px solid lightgray;
+      margin: 10px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      position: relative;
+      transition: all 0.5s ease;
+
+      h3 {
+        position: absolute;
+        font-size: 20px;
+      }
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: 1;
+      }
+      &:hover {
+        background-color: $mainColor;
+        opacity: 0.9;
+        z-index: 0;
       }
     }
   }
