--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -46,6 +46,7 @@
       color: white;
       position: relative;
       transition: all 0.5s ease;
+      cursor: pointer;
 
       h3 {
         position: absolute;
