--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -20,6 +20,23 @@
         height: 100%;
         background-color: white;
         border-radius: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .left {
+          flex: 4;
+          height: 80%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background-color: yellowgreen;
+        }
+        .right {
+          flex: 8;
+          height: 100%;
+          background-color: yellow;
+        }
       }
     }
   }
