--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -30,7 +30,39 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          background-color: yellowgreen;
+
+          .leftContainer {
+            width: 90%;
+            height: 70%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            .imgContainer {
+              width: 40px;
+              height: 40px;
+              border-radius: 50%;
+              background-color: rgb(236, 155, 126);
+              display: flex;
+              align-items: center;
+              justify-content: center;
+
+              img {
+                width: 25px;
+              }
+            }
+            h2 {
+              font-size: 20px;
+            }
+            p {
+              font-size: 13px;
+            }
+            span {
+              font-size: 12px;
+              font-weight: 600;
+              text-decoration: underline;
+            }
+          }
         }
         .right {
           flex: 8;
