--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,5 +1,6 @@
+@import "../../global.scss";
 .works {
-  background-color: crimson;
+  background-color: $mainColor;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -42,7 +43,7 @@
               width: 40px;
               height: 40px;
               border-radius: 50%;
-              background-color: rgb(236, 155, 126);
+              background-color: $mainColor;
               display: flex;
               align-items: center;
               justify-content: center;
@@ -61,13 +62,21 @@
               font-size: 12px;
               font-weight: 600;
               text-decoration: underline;
+              cursor: pointer;
             }
           }
         }
         .right {
           flex: 8;
           height: 100%;
-          background-color: yellow;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          overflow: hidden;
+
+          img {
+            width: 400px;
+          }
         }
       }
     }
