--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -1,3 +1,41 @@
-.testimonials{
-    background-color: white;
+.testimonials {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h1 {
+    font-size: 50px;
+  }
+
+  .container{
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .card{
+          width: 250px;
+          height: 70%;
+          border-radius: 10px;
+          box-shadow: 0px 0px 15px -8px black;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-around;
+          padding: 20px;
+
+          .top{
+              display: flex;
+              align-items: center;
+              justify-content: center;
+
+              img{
+                  &.left{
+                      
+                  }
+              }
+          }
+      }
+  }
 }
