--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -1,3 +1,4 @@
+@import "../../global.scss";
 .testimonials {
   background-color: white;
   display: flex;
@@ -8,34 +9,47 @@
     font-size: 50px;
   }
 
-  .container{
-      width: 100%;
-      height: 100%;
+  .container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .card {
+      width: 250px;
+      height: 70%;
+      border-radius: 10px;
+      box-shadow: 0px 0px 15px -8px black;
       display: flex;
-      align-items: center;
-      justify-content: center;
+      flex-direction: column;
+      justify-content: space-around;
+      padding: 20px;
 
-      .card{
-          width: 250px;
-          height: 70%;
-          border-radius: 10px;
-          box-shadow: 0px 0px 15px -8px black;
-          display: flex;
-          flex-direction: column;
-          justify-content: space-around;
-          padding: 20px;
+      .top {
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-          .top{
-              display: flex;
-              align-items: center;
-              justify-content: center;
-
-              img{
-                  &.left{
-                      
-                  }
-              }
+        img {
+          &.left,
+          &.right {
+            height: 25px;
           }
+          &.user {
+            height: 60px;
+            width: 60px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin: 0 30px;
+          }
+        }
       }
+      .center {
+        padding: 10;
+        border-radius: 10px;
+        background-color: rgb(168, 168, 197);
+      }
+    }
   }
 }
