--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -11,7 +11,7 @@
 
   .container {
     width: 100%;
-    height: 100%;
+    height: 80%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -29,6 +29,7 @@
       .top {
         display: flex;
         align-items: center;
+
         justify-content: center;
 
         img {
@@ -49,6 +50,20 @@
         padding: 10;
         border-radius: 10px;
         background-color: rgb(168, 168, 197);
+      }
+
+      .bottom {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+
+        h3 {
+          margin-bottom: 5px;
+        }
+        h4 {
+          color: cadetblue;
+        }
       }
     }
   }
