--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,3 +1,51 @@
+@import "../../global.scss";
 .contact {
-  background-color: lightblue;
+  background-color: white;
+  display: flex;
+
+  .left {
+    flex: 1;
+    overflow: hidden;
+
+    img {
+      height: 100%;
+    }
+  }
+  .right {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+    h2 {
+      font-size: 30px;
+      color: $mainColor;
+    }
+    form {
+      width: 70%;
+      height: 70%;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+
+      input {
+        width: 300px;
+        height: 30px;
+        font-size: 14px;
+      }
+      textarea {
+        width: 300px;
+        height: 200px;
+        font-size: 14px;
+      }
+      button {
+        width: 150px;
+        height: 30px;
+        color: white;
+        background-color: $mainColor;
+        border: none;
+        border-radius: 10px;
+      }
+    }
+  }
 }
