--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -15,7 +15,8 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: center;
 
     h2 {
       font-size: 30px;
@@ -24,9 +25,10 @@
     form {
       width: 70%;
       height: 70%;
-      align-items: center;
-      justify-content: center;
+      display: flex;
       flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
 
       input {
         width: 300px;
@@ -45,6 +47,8 @@
         background-color: $mainColor;
         border: none;
         border-radius: 10px;
+        font-weight: 500;
+        cursor: pointer;
       }
     }
   }
