--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -49,6 +49,10 @@
         border-radius: 10px;
         font-weight: 500;
         cursor: pointer;
+
+        &:focus {
+          outline: none;
+        }
       }
     }
   }
