--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -30,6 +30,10 @@
         align-items: center;
         margin-left: 30px;
 
+        @include mobile {
+          display: none;
+        }
+
         .icons {
           font-size: 18px;
           margin-right: 5px;
