--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -2,6 +2,9 @@
 .contact {
   background-color: white;
   display: flex;
+  @include mobile {
+    flex-direction: column;
+  }
 
   .left {
     flex: 1;
@@ -34,11 +37,20 @@
         width: 300px;
         height: 30px;
         font-size: 14px;
+        @include mobile {
+          width: 200px;
+          height: 20px;
+        }
       }
       textarea {
         width: 300px;
         height: 200px;
         font-size: 14px;
+
+        @include mobile {
+          width: 200px;
+          height: 100px;
+        }
       }
       button {
         width: 150px;
