--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -66,6 +66,11 @@
         padding: 10;
         border-radius: 10px;
         background-color: rgb(168, 168, 197);
+
+        @include mobile {
+          font-size: 12px;
+          padding: 5px;
+        }
       }
 
       .bottom {
